--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "angular2-template-loader": "^0.4.0",
     "autoprefixer": "^6.3.2",
     "awesome-typescript-loader": "^2.2.4",
+    "bootstrap": "^3.3.7",
     "codelyzer": "0.0.26",
     "copy-webpack-plugin": "^3.0.0",
     "css-loader": "^0.25.0",
@@ -59,6 +60,7 @@
     "istanbul-instrumenter-loader": "^0.2.0",
     "jasmine-core": "^2.3.4",
     "jasmine-spec-reporter": "^2.4.0",
+    "jquery": "^3.1.1",
     "json-loader": "^0.5.3",
     "karma": "1.3.0",
     "karma-chrome-launcher": "^2.0.0",
